# Connie-Melody-Skye

./: LICENSE  README.md  check.py  crowdin.yml  database.db  example.env  exported.sql  ja  main.py  pinned.txt  pyproject.toml  requirements.txt  schema.sql  table.sql  tool.py  youtube_database.db
.github/workflows/: auto-poetry.yml
cogs/: find.py  help.py  owner.py
ja/github/: workflows
locales/: bg.json  cs.json  da.json  de.json  el.json  en-GB.json  en-US.json  en-us.json  es-419.json  es-ES.json  fi.json  fr.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  nl.json  no.json  pl.json  pt-BR.json  ru.json  sv-SE.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
utils/: __init__.py  extra.py  translator.py
